2007-01-02  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Switch to SVN.

2007-01-01  Danilo Šegan  <danilo@gnome.org>

	* teams.py: Fix exception when release == None.

2006-12-28  Danilo Šegan  <danilo@gnome.org>

	* teams.py (TranslationTeams.compare_langs): Support .xml on releases.

	* templates/language-release-xml.tmpl: Added.
	* templates/language-release-doc-xml.tmpl: Added.

2006-12-28  Danilo Šegan  <danilo@gnome.org>

	* modules.py (XmlModules.__init__): Init description field on
	domains/documents.

2006-12-27  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.doc_l10n_stats): Use potbase
	instead of docpath as domain name for docs.

	* gnome-modules.xml.in:
	* releases.xml.in: Updated a couple of modules.

	* templates/language-release-doc-stats-modules.tmpl:
	* templates/language-release-ui-stats-modules.tmpl: sort modules
	by id.

2006-12-27  Danilo Šegan  <danilo@gnome.org>

	Implement bug #104312.

	* update-stats.py (LocStatistics.po_file_stats): Add UTF-8
	encoding check for PO files.

2006-12-18  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Add tracker.
	* releases.xml.in: Add 2.18.

2006-12-15  Danilo Šegan  <danilo@gnome.org>

	* modules.py (XmlModules.__init__): Use module ID for filename.

2006-10-16  Danilo Šegan  <danilo@gnome.org>

	* templates/module.tmpl: Use /people/ here as well.

2006-09-15  Danilo Šegan  <danilo@gnome.org>

	* releases.py (Releases.list_modules): Check for description key
	before blindly setting it.

2006-07-31  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.generate_translated_docs): Use
	sourcedir/docbase instead of docdir.

2006-07-30  Danilo Šegan  <danilo@gnome.org>

	* modules.py (XmlModules.__init__): Check for maintainer key.

2006-07-21  Danilo Šegan  <danilo@gnome.org>

	* update-stats.py (LocStatistics.check_lang_support): Check if line is non-empty.

2006-04-20  Danilo Šegan  <danilo@gnome.org>
