@@ -9,10 +9,10 @@
       <bugs-component>general</bugs-component>
       <svnroot>http://svn.gnome.org/svn/%(module/id)</svnroot>
       <svnmodule>%(module/id)</svnmodule>
-      <svnweb>http://svn.gnome.org/viewsvn/%(module/id)/trunk</svnweb>
+      <svnweb>http://svn.gnome.org/viewcvs/%(module/id)/trunk</svnweb>
     </module>
     <branch id="HEAD" regenerate="1">
-      <svnweb>http://svn.gnome.org/viewsvn/%(module/id)/trunk</svnweb>
+      <svnweb>http://svn.gnome.org/viewcvs/%(module/id)/branches/%(branch/id)</svnweb>
       <domain id="po">
         <_description>UI translations</_description>
       </domain>
@@ -229,6 +229,7 @@
   <module id="gnome-system-monitor">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="lsr">
     <branch id="HEAD"/>
@@ -244,6 +245,7 @@
   </module>
   <module id="libgnomeprintui">
     <branch id="HEAD"/>
+    <branch id="gnome-2-12"/>
   </module>
   <module id="gnome-sharing">
     <branch id="HEAD"/>
@@ -260,6 +262,7 @@
   <module id="vte">
     <branch id="vte-0-12"/>
     <branch id="HEAD"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="ghex">
     <branch id="HEAD"/>
@@ -276,6 +279,7 @@
   <module id="nautilus-cd-burner">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="metacity">
     <branch id="HEAD"/>
@@ -306,6 +310,7 @@
   <module id="gconf-editor">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="evolution">
     <branch id="HEAD"/>
@@ -399,6 +404,7 @@
   <module id="gtksourceview">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="notifier">
     <branch id="HEAD"/>
@@ -447,6 +453,7 @@
   <module id="gnome-desktop">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="gok">
     <branch id="HEAD"/>
@@ -455,6 +462,7 @@
   <module id="eel">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="scaffold">
     <branch id="HEAD"/>
@@ -471,6 +479,7 @@
   <module id="libgnome">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="gnome-user-share">
     <branch id="HEAD"/>
@@ -480,6 +489,7 @@
   </module>
   <module id="libgnomeprint">
     <branch id="HEAD"/>
+    <branch id="gnome-2-12"/>
   </module>
   <module id="evolution-webcal">
     <branch id="HEAD"/>
@@ -511,6 +521,7 @@
   <module id="gnome-panel">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="evolution-brainread">
     <branch id="HEAD"/>
@@ -553,6 +564,7 @@
   </module>
   <module id="libbonoboui">
     <branch id="HEAD"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="sawfish">
     <branch id="HEAD"/>
@@ -570,6 +582,7 @@
   </module>
   <module id="gnome-media">
     <branch id="HEAD"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="gedit-plugins">
     <branch id="HEAD"/>
@@ -584,6 +597,7 @@
   <module id="libgnomeui">
     <branch id="HEAD"/>
     <branch id="libgnomeui-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="gnome-pilot">
     <branch id="HEAD"/>
@@ -620,6 +634,7 @@
   </module>
   <module id="alacarte">
     <branch id="HEAD"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="gcompris">
     <branch id="HEAD"/>
@@ -692,6 +707,7 @@
   <module id="bug-buddy">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="drwright">
     <branch id="HEAD"/>
@@ -713,6 +729,7 @@
   <module id="gnome-mag">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="netapplet">
     <branch id="HEAD"/>
@@ -725,6 +742,7 @@
   </module>
   <module id="gnome-keyring-manager">
     <branch id="HEAD"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="criawips">
     <branch id="HEAD"/>
@@ -735,6 +753,7 @@
   <module id="gnome-keyring">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="gwget">
     <branch id="HEAD"/>
@@ -787,6 +806,7 @@
   <module id="gnome-menus">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="sodipodi">
     <branch id="HEAD"/>
@@ -794,10 +814,12 @@
   <module id="nautilus">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="gnome-vfs">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="gnome-themes">
     <branch id="HEAD"/>
@@ -818,6 +840,7 @@
   <module id="gedit">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="blam">
     <branch id="HEAD"/>
@@ -867,6 +890,7 @@
       <domain id="po-plug-ins" potbase="gimp-plug-ins"/>
       <domain id="po-tips" potbase="gimp-tips"/>
       <domain id="po-script-fu" potbase="gimp-script-fu"/>
+      <domain id="po-python" potbase="gimp-python"/>
     </branch>
   </module>
   <module id="gnumeric">
@@ -934,6 +958,7 @@
   <module id="gnome-screensaver">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="quick-lounge-applet">
     <branch id="HEAD"/>
@@ -941,6 +966,7 @@
   <module id="libbonobo">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="gdm2">
     <branch id="HEAD"/>
@@ -966,6 +992,7 @@
   <module id="gnome-session">
     <branch id="HEAD"/>
     <branch id="gnome-2-14"/>
+    <branch id="gnome-2-16"/>
   </module>
   <module id="alleyoop">
     <branch id="HEAD"/>
