@@ -248,6 +248,7 @@
     <module id="uf-view"/>
     <module id="update-manager"/>
     <module id="webeyes"/>
+    <module id="gnome-main-menu"/>
   </release>
   <release id="gnome-2-16" stringfrozen="true">
     <_description>Gnome 2.16</_description>
@@ -257,21 +258,21 @@
       <module id="gail"/>
       <module id="gconf"/>
       <module id="glib" branch="glib-2-12"/>
-      <module id="gnome-vfs"/>
+      <module id="gnome-vfs" branch="gnome-2-16"/>
       <module id="gtk+" branch="gtk-2-10"/>
-      <module id="libbonobo"/>
-      <module id="libbonoboui"/>
-      <module id="libgnome"/>
+      <module id="libbonobo" branch="gnome-2-16"/>
+      <module id="libbonoboui" branch="gnome-2-16"/>
+      <module id="libgnome" branch="gnome-2-16"/>
       <module id="libgnomecanvas"/>
-      <module id="libgnomeui"/>
+      <module id="libgnomeui" branch="gnome-2-16"/>
     </category>
     <category id="desktop">
       <_description>GNOME desktop. Essential software.</_description>
-      <module id="alacarte"/>
-      <module id="bug-buddy"/>
+      <module id="alacarte" branch="gnome-2-16"/>
+      <module id="bug-buddy" branch="gnome-2-16"/>
       <module id="dasher" branch="gnome-2-16"/>
       <module id="deskbar-applet" branch="gnome-2-16"/>
-      <module id="eel"/>
+      <module id="eel" branch="gnome-2-16"/>
       <module id="ekiga" branch="gnome-2-14"/>
       <module id="eog" branch="gnome-2-16"/>
       <module id="epiphany" branch="gnome-2-16"/>
@@ -283,28 +284,28 @@
       <module id="fast-user-switch-applet"/>
       <module id="file-roller" branch="gnome-2-16"/>
       <module id="gcalctool" branch="gnome-2-16"/>
-      <module id="gconf-editor"/>
+      <module id="gconf-editor" branch="gnome-2-16"/>
       <module id="gdm2" branch="gnome-2-16"/>
-      <module id="gedit"/>
+      <module id="gedit" branch="gnome-2-16"/>
       <module id="gnome-applets" branch="gnome-2-16"/>
       <module id="gnome-backgrounds"/>
       <module id="gnome-control-center" branch="gnome-2-16"/>
-      <module id="gnome-desktop"/>
+      <module id="gnome-desktop" branch="gnome-2-16"/>
       <module id="gnome-doc-utils" branch="gnome-2-16"/>
       <module id="gnome-games" branch="gnome-2-16"/>
       <module id="gnome-icon-theme" branch="gnome-2-16"/>
-      <module id="gnome-keyring"/>
-      <module id="gnome-keyring-manager"/>
-      <module id="gnome-mag"/>
-      <module id="gnome-media"/>
-      <module id="gnome-menus"/>
+      <module id="gnome-keyring" branch="gnome-2-16"/>
+      <module id="gnome-keyring-manager" branch="gnome-2-16"/>
+      <module id="gnome-mag" branch="gnome-2-16"/>
+      <module id="gnome-media" branch="gnome-2-16"/>
+      <module id="gnome-menus" branch="gnome-2-16"/>
       <module id="gnome-netstatus"/>
       <module id="gnome-nettool" branch="gnome-2-16"/>
-      <module id="gnome-panel"/>
+      <module id="gnome-panel" branch="gnome-2-16"/>
       <module id="gnome-power-manager" branch="gnome-2-16"/>
-      <module id="gnome-screensaver"/>
-      <module id="gnome-session"/>
-      <module id="gnome-system-monitor"/>
+      <module id="gnome-screensaver" branch="gnome-2-16"/>
+      <module id="gnome-session" branch="gnome-2-16"/>
+      <module id="gnome-system-monitor" branch="gnome-2-16"/>
       <module id="gnome-system-tools" branch="gnome-2-14"/>
       <module id="gnome-terminal" branch="gnome-2-16"/>
       <module id="gnome-themes" branch="gnome-2-16"/>
@@ -314,15 +315,15 @@
       <module id="gnopernicus"/>
       <module id="gok"/>
       <module id="gtkhtml" branch="gnome-2-16"/>
-      <module id="gtksourceview"/>
+      <module id="gtksourceview" branch="gnome-2-16"/>
       <module id="gucharmap"/>
-      <module id="libgnomeprint"/>
-      <module id="libgnomeprintui"/>
+      <module id="libgnomeprint" branch="gnome-2-12"/>
+      <module id="libgnomeprintui" branch="gnome-2-12"/>
       <module id="libgtop"/>
       <module id="libwnck"/>
       <module id="metacity" branch="gnome-2-16"/>
-      <module id="nautilus"/>
-      <module id="nautilus-cd-burner"/>
+      <module id="nautilus" branch="gnome-2-16"/>
+      <module id="nautilus-cd-burner" branch="gnome-2-16"/>
       <module id="orca" branch="gnome-2-16"/>
       <module id="pessulus"/>
       <module id="sabayon"/>
@@ -330,7 +331,7 @@
       <module id="tomboy" branch="gnome-2-16"/>
       <module id="totem" branch="gnome-2-16"/>
       <module id="vino" branch="gnome-2-16"/>
-      <module id="vte"/>
+      <module id="vte" branch="gnome-2-16"/>
       <module id="yelp"/>
       <module id="zenity" branch="gnome-2-16"/>
     </category>
@@ -390,8 +391,8 @@
       <module id="gnome-power-manager"/>
       <module id="gnome-screensaver"/>
       <module id="gnome-session"/>
-      <module id="gnome-system-monitor" branch="gnome-2-16"/>
-      <module id="gnome-system-tools"/>
+      <module id="gnome-system-monitor"/>
+      <module id="gnome-system-tools" branch="gnome-2-14"/>
       <module id="gnome-terminal"/>
       <module id="gnome-themes"/>
       <module id="gnome-user-docs"/>
@@ -448,6 +449,6 @@
     <module id="pan"/>
     <module id="pan2"/>
     <module id="regexxer"/>
-    <module id="seahorse" branch="seahorse-0-8"/>
+    <module id="seahorse"/>
   </release>
 </releases>
