@@ -1,5 +1,7 @@
 2007-01-02  Danilo Šegan  <danilo@gnome.org>
 
+	* releases.xml.in: Update data.
+
 	* gnome-modules.xml.in: Switch to SVN.
 
 2007-01-01  Danilo Šegan  <danilo@gnome.org>
